# template-light

./: .travis.yml  CMakeLists.txt  README.md  build
.travis/: Dockerfile
source/: code.cc  test-code.cc
testing/: CMakeLists.txt  testing.cc
testing/include/: testing.h
